[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Dialogue/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://UI/Dialogue/DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dev Folders/Andrew/AndrewTheme.tres" type="Theme" id=3]
[ext_resource path="res://PlayerScripts/Movement.gd" type="Script" id=4]
[ext_resource path="res://Assets/DevArt/Character.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 212.067, 112.438 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 69.7153, 10 )

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 4 )
speed = 1000

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="DialogueBox" type="MarginContainer" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -1084.86
margin_top = -679.724
margin_right = 827.216
margin_bottom = 400.276
rect_clip_content = true
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 2, 1 )
z_index = -1
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.83301, 105.471 )
scale = Vector2( 0.31999, 0.32236 )
shape = SubResource( 2 )

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
scale = Vector2( 1, 14.44 )
shape = SubResource( 5 )
[connection signal="area_entered" from="PlayerArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="PlayerArea" to="." method="_on_Area2D_area_exited"]
